# automatic-glowing-octo

./: Cargo.toml  README.md
shaders/: attractor.comp.wgsl  attractor.render.wgsl  trails.wgsl
src/: audio.rs  camera.rs  fx.rs  main.rs  presets.rs  sim.rs  ui.rs  ui_panels.rs
