[package]
name = "dust"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "27.0.1"
winit = "0.30.12"
glam = "0.30.9"
bytemuck = { version = "1.24.0", features = ["derive"] }
anyhow = "1.0.100"
pollster = "0.4.0"
env_logger = "0.11.8"
log = "0.4.28"
egui = "0.33.0"
egui-winit = "0.33.0"
egui-wgpu = "0.33.0"
pipewire = "0.9.2"
parking_lot = "0.12.4"
rustfft = "6.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
